# event_deduplicator

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: logging_config.py  main.py
app/api/: routers.py  schemas.py
app/core/: cleanup.py  config.py  database.py  models.py
app/deduplicator/: deduplicator.py
app/kafka/: config.py  consumer.py  consumer_main.py  producer.py
grafana/dashboards/: metrics_fast_api_kafka_pg_redis.json
grafana/provisioning/dashboards/: dashboards.yml
logs/: app.log.1  app.log.2  app.log.3
migration/: env.py
migration/versions/: 3294f5fd4c13_init.py  4563be8065b7_update_client_id.py  5fd69d76ca47_add_created_at_to_events.py  78b30c9c5d20_init.py  8afb09a1ad19_initial_migration.py  9b9a0f85555c_add_r_column_unique_key.py  d36b63a958d6_update_event_datetime.py
prometheus/: prometheus.yml  queries.yaml
tests/: locustfile.py  sample_with_duplicates.json  test_message_processor.py
